--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
     package="com.example.kutibari">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-feature android:name="android.hardware.camera"
+        android:required="true"/>
 
     <application
         android:allowBackup="true"
@@ -15,6 +17,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.KutiBari"
         tools:targetApi="31">
+        <activity
+            android:name=".RegisterScan"
+            android:exported="false" />
         <activity
             android:name=".CustomerOrderPage"
             android:exported="false" />
@@ -60,6 +65,9 @@
         <activity
             android:name=".MainActivity"
             android:exported="true">
+            <meta-data
+                android:name="com.google.firebase.ml.vision.DEPENDENCIES"
+                android:value="ocr"/>
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
