--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,5 +51,7 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
     //notnull org
     implementation 'org.jetbrains:annotations:16.0.2'
+    //gif image
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.17'
 }
 apply plugin: 'com.google.gms.google-services'
