--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,9 @@
     <uses-feature
         android:name="android.hardware.camera"
         android:required="true" />
-
+    <queries>
+        <package android:name="com.bKash.customerapp" />
+    </queries>
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
